# hackaton-upm-2026

./: .env  .env.example  .gitignore  DECISIONS.md  Makefile  README.md  README2.md  REQUISITOS.md  SETUP.md  backend-flow.txt  commands.txt  deploy-backend.sh  deploy-frontend.sh  deploy.sh  dev.db  documentacion.md  index.html  main.py  next.config.ts  package-lock.json  package.json  pyproject.toml  requirements.txt  requisitos.txt  server.js  user-partitioning-requirements.txt  usuarios_upm.db
.devcontainer/: devcontainer.json
.github/workflows/: main.yml
FrontEnd/: package-lock.json  package.json  vite.config.ts
Hackathon1/: Hackathon1.csproj  Hackathon1.sln  Program.cs  appsettings.Development.json  appsettings.json
back-end/: package-lock.json  package.json
backend/: Dockerfile  app.py  config.py  pom.xml  requirements.txt
backend-hackathon/: Dockerfile  package-lock.json
bmf-clima/: build.sh  next.config.ts  package-lock.json  package.json  project.4coder
campusSostenible/: pom.xml
demo/: pom.xml
docker/: Dockerfile.backend  Dockerfile.frontend  docker-compose.yaml
frontend/: README.md  app.py  package-lock.json  package.json  tailwind.config.js
frontend-hackathon/: package-lock.json  package.json
hackaton/: package-lock.json  package.json
infra/: docker-compose.yml  package-lock.json
prisma/: dev.db  schema.prisma  seed.ts
scripts/: api_get_token.sh  api_register.sh  check-weather-logs.ts  clean-weather-logs.ts
src/: App.css  App.jsx  invoke_llm.py  invoke_llm_tools.py  middleware.ts  proxy.ts
templates/: index.html
(+529 files in other folders)
